--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		</div>
 
         <div class="max-width">
-            <div class="home-content">
+            <div id="home-content" class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Marc Neo Artiaga</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
